example/views/errors/500.mustache
<h1>Internal Server Error</h1>
<p>Something went wrong on our end. We're working to fix it.</p>
<p><a href="/">Go back to home</a></p>
